--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Liam Dickson</title>
-	<!-- Bootstrap core css -->
-    <link href="css/darkly-bootstrap.min.css" rel="stylesheet">
+	<title>SongDickson.com</title>
+    <!-- Bootstrap core css -->
+    <link href="css/spacelab-bootstrap.min.css" rel="stylesheet">
     <!-- custom page css -->
     <link href="css/style.css" rel="stylesheet">
+    <!-- Photoswipe css -->
+    <link rel="stylesheet" href="css/photoswipe/photoswipe.css">
+    <link rel="stylesheet" href="css/photoswipe/default-skin.css">
+    <!-- Photoswipe js -->
+    <script src="js/photoswipe/photoswipe.min.js"></script>
+    <script src="js/photoswipe/photoswipe-ui-default.min.js"></script>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
