--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- Photoswipe js -->
     <script src="js/photoswipe/photoswipe.min.js"></script>
     <script src="js/photoswipe/photoswipe-ui-default.min.js"></script>
+    <!-- jQuery js -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
