--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
 </head>
 <body>
 	<div id="main"></div>
-	<script type="text/javascript" src="js/bundle.js"></script>
+	<script type="text/javascript" src="js/packed.js"></script>
 </body>
 </html>
